--- a/app_festa/templates/festa_home/home.html
+++ b/app_festa/templates/festa_home/home.html
@@ -1,108 +1,253 @@
-{% extends 'base.html' %}
+{% extends 'base_copyright_version.html' %}
 {% block content %}
 <div class="container_home">
-    <div class="main_home">
-        <h1>메인입니다</h1>
-        <form action="{% url 'search' %}" method ="GET">
-            <input type="text" name="search_bar" placeholder="ex)'지산 락 페스티벌'궁금하지 않나요?"value="{{keyword}}">
-            <input type="submit" value="검색">
-        </form>
-    </div>
-    
-    <div class="festa_now_home">
-        <div id="festa_now_title_home">
-            <h5>Festa NOW</h5>
-            <p>바로 오늘, 함께 즐겨봐요</p>
-        </div>
-        <div id="festa_now_contents_home">
-            <!-- 동적생성 필요, 임시 -->
-            <div class="festa_now_items_home">
-                <a href="#test1">test1</a>
-            </div>
-            <div class="festa_now_items_home">
-                <a href="#test2">test2</a>
-            </div>
-            <div class="festa_now_items_home">
-                <a href="#test3">test3</a>
-            </div>
+    <!--메인 최상단 배경 및 검색 버튼-->
+    <div id="main_home">
+        <div>
+            <span>우리만의 그라운드, 페스타 그라운드</span>
         </div>
         <div>
-
+            <!--검색 버튼-->
+            <form action="{% url 'search' %}" method="GET">
+                <input type="text" name="search_bar" placeholder="ex)'지산 락 페스티벌'궁금하지 않나요?" value="{{keyword}}">
+                <input type="submit" value="검색">
+            </form>
+            <!-- 검색결과 가져오기 -->
+            {% for festa in result_festa %}
+            {{festa.name}}
+            {% endfor%}
         </div>
-        <p>{{today|date:"Y"}}년 {{today|date:"m"}}월 {{today|date:"d"}}일</p>
-
-        <!--  Festa 객체들 중에서 공연 날짜 == 오늘 날짜 이면 festa_now에 게시 -->
-        {% for festa_now in festas.all %} 
-        {% if festa_now.schedule|date:"Y m d" == today|date:"Y m d" %}
-            <!-- 각 festa별 로그인 후 festa_now게시판으로 이동 -->
-            <a href="{% url 'now_detail' festa_now.id %}"><img src="{{ festa_now.poster.url }}"></a>
-            <p>{{ festa_now.name }} D-day</p>
-        {% endif %}
-        {% endfor %}
     </div>
-    
-    <div class="festa_ready_home">
-        <div id="festa_ready_title_home">
-                <h5>Festa READY</h5>
-                <p>다가오는 행사를 200배 더 즐겁게 즐기려면?</p>
-        </div>
-        <div id="festa_ready_contents_home">
-                <!-- 동적생성 필요, 임시 -->
-                <div class="festa_ready_items_home">
-                    <a href="#test1">test1</a>
-                </div>
-                <div class="festa_ready_items_home">
-                    <a href="#test2">test2</a>
-                </div>
-                <div class="festa_ready_items_home">
-                    <a href="#test3">test3</a>
-                </div>
+
+    <!-- 페스타 나우 박스 -->
+    <div id="festa_now_home">
+        <!-- 전체 아이템 컨텐츠 박스 -->
+        <div class="contents_box">
+            <!-- 전체 아이템 타이틀 박스 -->
+            <div id="festa_now_title_home">
+                <h5 class="main_text">Festa NOW</h5>
+                <p class="sub_text">바로 오늘, 함께 즐겨봐요</p>
             </div>
-        <!-- Festa 객체들 중에서 공연 날짜 > 오늘 날짜 이면 festa_ready에 게시 -->
-        {% for festa_ready in festas.all %}
-        {% if festa_ready.schedule|date:"Y m d" > today|date:"Y m d" %}
-            <!-- 각 festa별 festa_ready게시판으로 이동 -->
-            <a href="{% url 'ready_detail' festa_ready.id %}"><img src="{{ festa_ready.poster.url }}"></a>
-            <p>{{ festa_ready.name }} D-({{festa_ready.schedule|date:"d"}}-{{today|date:"d"}})</p>
-            
-        {% endif %}
-        {% endfor %}
+            <!-- 전체 아이템 리스트 박스 -->
+            <div class="contents_list">
+                {% for festa_now in festas.all %}
+                {% if festa_now.schedule|date:"Y m d" == today|date:"Y m d" %}
+                <!-- 개별 아이템 박스 -->
+                <div class="item_object">
+                    <!-- 이미지 표시 박스 -->
+                    <div class="img_wrapper">
+                        <a href="{% url 'now_detail' festa_now.id %}"><img class="thumnail" src="{{ festa_now.poster.url }}"></a>
+                    </div>
+                    <!-- 날짜 표시 박스 -->
+                    <div class="day_wrapper">
+                        <span class="day_span">
+                            {{ festa_now.name }} D-day
+                        </span>
+                    </div>
+                </div>
+                {% endif %}
+                {% endfor %}
+            </div>
+        </div>
+
+    </div>
+
+    <!-- 페스타 레디 -->
+    <div id="festa_ready_home">
+        <!-- 전체 아이템 컨텐츠 박스 -->
+        <div class="contents_box">
+            <div id="festa_ready_title_home">
+                <h5 class="main_text">Festa READY</h5>
+                <p class="sub_text">다가오는 행사를 200배 더 즐겁게 즐기려면?</p>
+            </div>
+            <!-- 전체 아이템 리스트 박스 -->
+            <div class="contents_list">
+                {% for festa_ready in festas.all %}
+                {% if festa_ready.schedule|date:"Y m d" > today|date:"Y m d" %}
+                <!-- 개별 아이템 박스 -->
+                <div class="item_object">
+                    <!-- 이미지 표시 박스 -->
+                    <div class="img_wrapper">
+                        <a href="{% url 'ready_detail' festa_ready.id %}"><img class="thumnail" src="{{ festa_ready.poster.url }}"></a>
+                    </div>
+                    <!-- 날짜 표시 박스 -->
+                    <div class="day_wrapper">
+                        <span class="day_span" id="festa_ready_date_span">
+                            {{ festa_ready.name }} D-({{festa_ready.schedule|date:"d"}}-{{today|date:"d"}})
+                            <script>
+                                var dayInterval = 0;
+                                var cFestaName = "{{ festa_ready.name }}";
+                                var cToday = "{{today|date:"d"}}";
+                                var cFestaDay = "{{festa_ready.schedule|date:"d"}}";
+                                dayInterval = cFestaDay - cToday;
+                                var cFestaReadyText = cFestaName + " D -" + dayInterval
+                                document.getElementById('festa_ready_date_span').innerHTML = cFestaReadyText;
+                            </script>
+                        </span>
+                    </div>
+                </div>
+                {% endif %}
+                {% endfor %}
+            </div>
+        </div>
     </div>
 </div>
 </body>
-<footer>
-    
-</footer>
+
 <style>
-    img {
-        height: 300px;
-        weight: 150px;
-        border: 1px solid;
-        border-color: black;
-    }
-    foot
-    .container_home{
+    /* 전체 컨테이너 셋팅 */
+    .container_home {
         margin-left: 0%;
         margin-right: 0%;
         width: 100%;
+        height: 100%;
     }
-    #festa_now_title_home, #festa_ready_title_home{
+
+    /* 검색 배너, 페스타 나우, 페스타 레디 div 설정 */
+    #main_home,
+    #festa_now_home,
+    #festa_ready_home {
+        width: 100%;
+        padding: 2% 10%;
+    }
+
+    #main_home{
+        width: 100%;
+        padding: 5% 10%;
         display: flex;
+        background-image: url('/static/banner.png');
+        background-size: contain;
+        background-repeat: no-repeat;
+        background-position: center center;
     }
-    #festa_now_contents_home, #festa_ready_contents_home{
-        display: flex;
-        overflow: auto;
-        justify-content: center;
+
+    #main_home div{
+        width: 50%;
     }
-    .festa_now_home{
+
+    #main_home div form{
+        padding-top: 10%;
+        text-align: center;
+    }
+
+    /* 페스타 나우 배경색 지정 */
+    #festa_now_home{
         background: #D9E5FF;
     }
-    .festa_now_items_home, .festa_ready_items_home{ /*'now & ready' items class */
-        margin: 3%;
+
+    /* 보여질 내용 사이즈 설정 */
+    .content_box{
+        width: 100%;
     }
-    .main_home, .festa_now_home, .festa_ready_home{
-        padding: 3% 10%;
+
+    /* 타이틀 가로정렬(메인 타이틀, 서브타이틀) */
+    #festa_now_title_home,
+    #festa_ready_title_home {
+        display: flex;
+        width: 100%;
+    }
+
+    /* 아이템 리스트 박스 가로정렬 */
+    .contents_list{
+        display: flex;
+        width: 100%;
+        overflow: auto;
+    }
+
+    /* 아이템 간의 margin */
+    .item_object{
+        width: 25%;
+        margin-left: 1%;
+        margin-right: 1%;
+    }
+
+    img {
+	width: 100%;
+    height: 240px;
+    }
+
+    /* '날씨 표시' 크기 글자만큼만 차지하도록 */
+    .day_span {
+        display: inline-block;
+    }
+
+    #festa_now_contents_home,
+    #festa_ready_contents_home {
+        display: flex;
+
+    }
+
+    .festa_now_items_home,
+    .festa_ready_items_home {
+        /*'now & ready' items class */
+        display: inline-block;
+        margin-left: 1%;
+        margin-right: 1%;
+        width: auto;
+    }
+    .sub_text{
+        margin-left: 10px;
     }
 </style>
+
+<script>
+    window.onload = function(){
+        this.imgResize();
+    }
+    // 썸네일 브라우저 크기에 따른 변화
+    window.onresize = function(){
+        this.imgResize();
+    }
+
+    function imgResize(){
+        // 브라우저 크기 확인
+        var browser_width = document.body.clientWidth;
+        var browser_height = document.body.clientHeight;
+
+        var thumnail = document.getElementsByClassName('thumnail');
+        var cWidth = 0;
+        var cHeight = 0;
+
+        for(var i = 0; i < thumnail.length; i++){
+            var limit = false;
+            cWidth = thumnail[i].width;
+
+            this.imgSizeLimit(browser_width, cWidth, thumnail[i]);
+
+            //가로 세로 비율 유지 및 적용
+            cHeight = cWidth * 0.68;
+            var heightToPixel = cHeight + 'px';
+            thumnail[i].style.height = heightToPixel;
+        }
+    }
+
+    //썸네일 이미지 크기 최대최소 제한
+    function imgSizeLimit(browserWidth, containerWidth, objectItem){
+        if(browserWidth >= 1290){
+            containerWidth = 320;
+            objectItem.style.width = '320px';
+            var iWrapper = document.getElementsByClassName('item_object');
+            for(var j = 0; j < iWrapper.length; j++){
+                iWrapper[j].style.width = '320px';
+            }
+        }
+        else if(browserWidth <= 600){
+            containerWidth = 120;
+            objectItem.style.width = '120px';
+            var iWrapper = document.getElementsByClassName('item_object');
+            for(var j = 0; j < iWrapper.length; j++){
+                iWrapper[j].style.width = '120px';
+            }
+        }
+        else{
+            var iWrapper = document.getElementsByClassName('item_object');
+            for(var j = 0; j < iWrapper.length; j++){
+                iWrapper[j].style.width = '25%';
+            }
+            objectItem.style.width = '100%';
+            containerWidth = objectItem.width;
+        }
+    }
+</script>
 
 {% endblock %}
