--- a/project_festa/templates/base_copyright_version.html
+++ b/project_festa/templates/base_copyright_version.html
@@ -75,6 +75,64 @@
     {% block content %}
     {% endblock %}
     <footer>
-        저작권
+            <div id="bt_footer_element">
+                    <div class="footer_item_top"><a href="#individual_information_policy">개인정보처리방침</a></div>
+                    <div class="footer_item_top"><a href="#agreement">이용약관</a></div>
+                    <div class="footer_item_top"><a href="#service_introduce">서비스소개</a></div>
+                </div>
+                <div id="text_footer_element">
+                    <div id="footer_item_img">
+                        <div id="img_copyright"></div>
+                    </div>
+                    <div id="footer_item_text">
+                        페스타 그라운드(Festa ground) <br>
+                        COPYRIGHT &copy; 2019 LIKELION Festa ground team <br>
+                        ALL RIGHTS RESERVED
+                    </div>
+                </div>
     </footer>
 </html>
+
+<style>
+    footer{
+        width: 100%;
+        background: #D9E5FF;
+    }
+    #bt_footer_element, #text_footer_element{
+        width: 100%;
+        display: flex;
+        justify-content: center;
+    }
+    #bt_footer_element{
+        padding-top: 2%;
+    }
+    #bt_footer_element a{
+        color: #000000;
+        text-decoration: none;
+    }
+    #text_footer_element{
+        padding-top: 1%;
+        padding-bottom: 2%;
+    }
+    .footer_item_top{
+        margin-left: 0.5%;
+        margin-right: 0.5%;
+        font-size: 10px;
+    }
+    #footer_item_text{
+        opacity: 0.5;
+        font-size: 10px;
+    }
+    #footer_item_img{
+        width: 10%;
+        opacity: 0.5;
+    }
+    #img_copyright{
+        width: 100%;
+        height: 100%;
+        background-image: url("/static/copyright.png");
+        background-size: contain;
+        background-position: center center;
+        background-repeat: no-repeat;
+    }
+</style>
